[package]
name = "taskbook_rust"
version = "0.1.0"
authors = ["alan-w-255 <1649022341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
serde =  { version = "1.0.98", features = ["derive"]}
clap = "2.33.0"
rusqlite = { version = "0.20.0", features = ["bundled"] }